# aichilles

./: .gitignore  LICENSE  README.md  pyproject.toml
aichilles_risk_discovery/: agent1_infer.py  agent2_explore.py  agent3_analyze.py  archive.py  harness.py  knowledge_base.py  oracle.py  param_extractor.py  plot_bugs.py  plot_workload_space.py  run_all_app.py  run_all_v2.py  run_parallel.py  schema_infer.py  utils.py
aichilles_risk_discovery/demo/: explorer_template.html  export_demo.py
aichilles_risk_discovery/templates/: agent1_schema.txt  agent2_correctness.txt  agent2_mutate.txt  agent2_optimality.txt  agent2_scalab_mem.txt  agent2_scalab_time.txt  agent3_dedup.txt  agent3_rootcause.txt
benchmarks/ADRS/cloudcast/: config.yaml  evaluator.py  run_workload.py  simulator.py
benchmarks/ADRS/eplb/: config.yaml  run_workload.py
benchmarks/ADRS/eplb/best/gpt/engram/: best_program.py
benchmarks/ADRS/llm_sql/: config.yaml  evaluator.py  initial_program.py  run_workload.py
benchmarks/ADRS/nanochat/: prepare.py
benchmarks/ADRS/prism/: config.yaml  run_workload.py
benchmarks/ADRS/txn_scheduling/: config.yaml  run_workload.py
benchmarks/recursive/nanochat/: _make_import_safe.py  config.yaml  evaluator.py  initial_program.py  lib.py  prepare.py  run_workload.py  setup_h100.sh  sweep_optimality.py
benchmarks/recursive/nanochat/best/: initial_autoresearch.py
benchmarks/recursive/nanochat/leaderboard/: INDEX.md
benchmarks/recursive/nanochat/recursive/: lib.py  optimized_from_karpathy.py  vanilla_transformer.py
docs/: index.html
docs/explorer/: index.html
(+138 files in other folders)
